// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box core HTML attributes Box allows autoFocus 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
}

<div
  autoFocus={true}
  className="c0"
>
  Autofocus?
</div>
`;

exports[`Box core HTML attributes Box allows for ARIA attributes 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
}

<div
  aria-disabled={true}
  className="c0"
>
  aria-disabled
</div>
`;

exports[`Box core HTML attributes Box allows for HTML events 1`] = `
.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
}

<div
  className="c0"
  onMouseEnter={[Function]}
>
  Autofocus?
</div>
`;
